scss: fix list markers being cut off
also decrease padding between text and marker

--- a/_sass/components/_list.scss
+++ b/_sass/components/_list.scss
@@ -19,11 +19,7 @@ ol {
 ul {
   list-style: disc;
   margin: 0 0 _size(element-margin) 0;
-  padding-left: 1em;
-
-  li {
-    padding-left: 0.5em;
-  }
+  padding-left: 1.3em;
 
   &.alt {
     list-style: none;
